; ModuleID = '/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_mc_msa.c_common_vt_8t_and_aver_dst_4w_msa.c'
source_filename = "/home/carl/AnghaBench/FFmpeg/libavcodec/mips/extr_vp9_mc_msa.c_common_vt_8t_and_aver_dst_4w_msa.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32*, i32, i32*, i32, i32*, i32)* @common_vt_8t_and_aver_dst_4w_msa to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @common_vt_8t_and_aver_dst_4w_msa(i32* %0, i32 %1, i32* %2, i32 %3, i32* %4, i32 %5) #0 {
  %7 = alloca i32*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32*, align 8
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  %14 = alloca i32, align 4
  %15 = alloca i32, align 4
  %16 = alloca i32, align 4
  %17 = alloca i32, align 4
  %18 = alloca i32, align 4
  %19 = alloca i32, align 4
  %20 = alloca i32, align 4
  %21 = alloca i32, align 4
  %22 = alloca i32, align 4
  %23 = alloca i32, align 4
  %24 = alloca i32, align 4
  %25 = alloca i32, align 4
  %26 = alloca i32, align 4
  %27 = alloca i32, align 4
  %28 = alloca i32, align 4
  %29 = alloca i32, align 4
  %30 = alloca i32, align 4
  %31 = alloca i32, align 4
  %32 = alloca i32, align 4
  %33 = alloca i32, align 4
  %34 = alloca i32, align 4
  %35 = alloca i32, align 4
  %36 = alloca i32, align 4
  %37 = alloca i32, align 4
  %38 = alloca i32, align 4
  %39 = alloca i32, align 4
  %40 = alloca i32, align 4
  %41 = alloca i32, align 4
  %42 = alloca i32, align 4
  %43 = alloca i32, align 4
  %44 = alloca i32, align 4
  %45 = alloca i32, align 4
  %46 = alloca i32, align 4
  %47 = alloca i32, align 4
  %48 = alloca i32, align 4
  %49 = alloca i32, align 4
  %50 = alloca i32, align 4
  %51 = alloca i32, align 4
  %52 = alloca i32, align 4
  store i32* %0, i32** %7, align 8
  store i32 %1, i32* %8, align 4
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32* %4, i32** %11, align 8
  store i32 %5, i32* %12, align 4
  %53 = load i32, i32* %8, align 4
  %54 = mul nsw i32 3, %53
  %55 = load i32*, i32** %7, align 8
  %56 = sext i32 %54 to i64
  %57 = sub i64 0, %56
  %58 = getelementptr inbounds i32, i32* %55, i64 %57
  store i32* %58, i32** %7, align 8
  %59 = load i32*, i32** %11, align 8
  %60 = call i32 @LD_SH(i32* %59)
  store i32 %60, i32* %50, align 4
  %61 = load i32, i32* %50, align 4
  %62 = load i32, i32* %46, align 4
  %63 = load i32, i32* %47, align 4
  %64 = load i32, i32* %48, align 4
  %65 = load i32, i32* %49, align 4
  %66 = call i32 @SPLATI_H4_SB(i32 %61, i32 0, i32 1, i32 2, i32 3, i32 %62, i32 %63, i32 %64, i32 %65)
  %67 = load i32*, i32** %7, align 8
  %68 = load i32, i32* %8, align 4
  %69 = load i32, i32* %18, align 4
  %70 = load i32, i32* %19, align 4
  %71 = load i32, i32* %20, align 4
  %72 = load i32, i32* %21, align 4
  %73 = load i32, i32* %22, align 4
  %74 = load i32, i32* %23, align 4
  %75 = load i32, i32* %24, align 4
  %76 = call i32 @LD_SB7(i32* %67, i32 %68, i32 %69, i32 %70, i32 %71, i32 %72, i32 %73, i32 %74, i32 %75)
  %77 = load i32, i32* %8, align 4
  %78 = mul nsw i32 7, %77
  %79 = load i32*, i32** %7, align 8
  %80 = sext i32 %78 to i64
  %81 = getelementptr inbounds i32, i32* %79, i64 %80
  store i32* %81, i32** %7, align 8
  %82 = load i32, i32* %19, align 4
  %83 = load i32, i32* %18, align 4
  %84 = load i32, i32* %21, align 4
  %85 = load i32, i32* %20, align 4
  %86 = load i32, i32* %23, align 4
  %87 = load i32, i32* %22, align 4
  %88 = load i32, i32* %20, align 4
  %89 = load i32, i32* %19, align 4
  %90 = load i32, i32* %31, align 4
  %91 = load i32, i32* %32, align 4
  %92 = load i32, i32* %33, align 4
  %93 = load i32, i32* %36, align 4
  %94 = call i32 @ILVR_B4_SB(i32 %82, i32 %83, i32 %84, i32 %85, i32 %86, i32 %87, i32 %88, i32 %89, i32 %90, i32 %91, i32 %92, i32 %93)
  %95 = load i32, i32* %22, align 4
  %96 = load i32, i32* %21, align 4
  %97 = load i32, i32* %24, align 4
  %98 = load i32, i32* %23, align 4
  %99 = load i32, i32* %37, align 4
  %100 = load i32, i32* %38, align 4
  %101 = call i32 @ILVR_B2_SB(i32 %95, i32 %96, i32 %97, i32 %98, i32 %99, i32 %100)
  %102 = load i32, i32* %36, align 4
  %103 = load i32, i32* %31, align 4
  %104 = load i32, i32* %37, align 4
  %105 = load i32, i32* %32, align 4
  %106 = load i32, i32* %38, align 4
  %107 = load i32, i32* %33, align 4
  %108 = load i32, i32* %41, align 4
  %109 = load i32, i32* %42, align 4
  %110 = load i32, i32* %43, align 4
  %111 = call i32 @ILVR_D3_SB(i32 %102, i32 %103, i32 %104, i32 %105, i32 %106, i32 %107, i32 %108, i32 %109, i32 %110)
  %112 = load i32, i32* %41, align 4
  %113 = load i32, i32* %42, align 4
  %114 = load i32, i32* %43, align 4
  %115 = call i32 @XORI_B3_128_SB(i32 %112, i32 %113, i32 %114)
  %116 = load i32, i32* %12, align 4
  %117 = ashr i32 %116, 2
  store i32 %117, i32* %13, align 4
  br label %118

118:                                              ; preds = %122, %6
  %119 = load i32, i32* %13, align 4
  %120 = add nsw i32 %119, -1
  store i32 %120, i32* %13, align 4
  %121 = icmp ne i32 %119, 0
  br i1 %121, label %122, label %214

122:                                              ; preds = %118
  %123 = load i32*, i32** %7, align 8
  %124 = load i32, i32* %8, align 4
  %125 = load i32, i32* %25, align 4
  %126 = load i32, i32* %26, align 4
  %127 = load i32, i32* %27, align 4
  %128 = load i32, i32* %28, align 4
  %129 = call i32 @LD_SB4(i32* %123, i32 %124, i32 %125, i32 %126, i32 %127, i32 %128)
  %130 = load i32, i32* %8, align 4
  %131 = mul nsw i32 4, %130
  %132 = load i32*, i32** %7, align 8
  %133 = sext i32 %131 to i64
  %134 = getelementptr inbounds i32, i32* %132, i64 %133
  store i32* %134, i32** %7, align 8
  %135 = load i32*, i32** %9, align 8
  %136 = load i32, i32* %10, align 4
  %137 = load i32, i32* %14, align 4
  %138 = load i32, i32* %15, align 4
  %139 = load i32, i32* %16, align 4
  %140 = load i32, i32* %17, align 4
  %141 = call i32 @LW4(i32* %135, i32 %136, i32 %137, i32 %138, i32 %139, i32 %140)
  %142 = load i32, i32* %14, align 4
  %143 = load i32, i32* %15, align 4
  %144 = load i32, i32* %16, align 4
  %145 = load i32, i32* %17, align 4
  %146 = load i32, i32* %29, align 4
  %147 = call i32 @INSERT_W4_UB(i32 %142, i32 %143, i32 %144, i32 %145, i32 %146)
  %148 = load i32, i32* %25, align 4
  %149 = load i32, i32* %24, align 4
  %150 = load i32, i32* %26, align 4
  %151 = load i32, i32* %25, align 4
  %152 = load i32, i32* %27, align 4
  %153 = load i32, i32* %26, align 4
  %154 = load i32, i32* %28, align 4
  %155 = load i32, i32* %27, align 4
  %156 = load i32, i32* %34, align 4
  %157 = load i32, i32* %39, align 4
  %158 = load i32, i32* %35, align 4
  %159 = load i32, i32* %40, align 4
  %160 = call i32 @ILVR_B4_SB(i32 %148, i32 %149, i32 %150, i32 %151, i32 %152, i32 %153, i32 %154, i32 %155, i32 %156, i32 %157, i32 %158, i32 %159)
  %161 = load i32, i32* %39, align 4
  %162 = load i32, i32* %34, align 4
  %163 = load i32, i32* %40, align 4
  %164 = load i32, i32* %35, align 4
  %165 = load i32, i32* %44, align 4
  %166 = load i32, i32* %45, align 4
  %167 = call i32 @ILVR_D2_SB(i32 %161, i32 %162, i32 %163, i32 %164, i32 %165, i32 %166)
  %168 = load i32, i32* %44, align 4
  %169 = load i32, i32* %45, align 4
  %170 = call i32 @XORI_B2_128_SB(i32 %168, i32 %169)
  %171 = load i32, i32* %41, align 4
  %172 = load i32, i32* %42, align 4
  %173 = load i32, i32* %43, align 4
  %174 = load i32, i32* %44, align 4
  %175 = load i32, i32* %46, align 4
  %176 = load i32, i32* %47, align 4
  %177 = load i32, i32* %48, align 4
  %178 = load i32, i32* %49, align 4
  %179 = call i32 @FILT_8TAP_DPADD_S_H(i32 %171, i32 %172, i32 %173, i32 %174, i32 %175, i32 %176, i32 %177, i32 %178)
  store i32 %179, i32* %51, align 4
  %180 = load i32, i32* %42, align 4
  %181 = load i32, i32* %43, align 4
  %182 = load i32, i32* %44, align 4
  %183 = load i32, i32* %45, align 4
  %184 = load i32, i32* %46, align 4
  %185 = load i32, i32* %47, align 4
  %186 = load i32, i32* %48, align 4
  %187 = load i32, i32* %49, align 4
  %188 = call i32 @FILT_8TAP_DPADD_S_H(i32 %180, i32 %181, i32 %182, i32 %183, i32 %184, i32 %185, i32 %186, i32 %187)
  store i32 %188, i32* %52, align 4
  %189 = load i32, i32* %51, align 4
  %190 = load i32, i32* %52, align 4
  %191 = call i32 @SRARI_H2_SH(i32 %189, i32 %190, i32 7)
  %192 = load i32, i32* %51, align 4
  %193 = load i32, i32* %52, align 4
  %194 = call i32 @SAT_SH2_SH(i32 %192, i32 %193, i32 7)
  %195 = load i32, i32* %51, align 4
  %196 = load i32, i32* %52, align 4
  %197 = call i32 @PCKEV_XORI128_UB(i32 %195, i32 %196)
  store i32 %197, i32* %30, align 4
  %198 = load i32, i32* %30, align 4
  %199 = load i32, i32* %29, align 4
  %200 = call i32 @__msa_aver_u_b(i32 %198, i32 %199)
  store i32 %200, i32* %30, align 4
  %201 = load i32, i32* %30, align 4
  %202 = load i32*, i32** %9, align 8
  %203 = load i32, i32* %10, align 4
  %204 = call i32 @ST_W4(i32 %201, i32 0, i32 1, i32 2, i32 3, i32* %202, i32 %203)
  %205 = load i32, i32* %10, align 4
  %206 = mul nsw i32 4, %205
  %207 = load i32*, i32** %9, align 8
  %208 = sext i32 %206 to i64
  %209 = getelementptr inbounds i32, i32* %207, i64 %208
  store i32* %209, i32** %9, align 8
  %210 = load i32, i32* %43, align 4
  store i32 %210, i32* %41, align 4
  %211 = load i32, i32* %44, align 4
  store i32 %211, i32* %42, align 4
  %212 = load i32, i32* %45, align 4
  store i32 %212, i32* %43, align 4
  %213 = load i32, i32* %28, align 4
  store i32 %213, i32* %24, align 4
  br label %118

214:                                              ; preds = %118
  ret void
}

declare dso_local i32 @LD_SH(i32*) #1

declare dso_local i32 @SPLATI_H4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LD_SB7(i32*, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVR_B4_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVR_B2_SB(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVR_D3_SB(i32, i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B3_128_SB(i32, i32, i32) #1

declare dso_local i32 @LD_SB4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @LW4(i32*, i32, i32, i32, i32, i32) #1

declare dso_local i32 @INSERT_W4_UB(i32, i32, i32, i32, i32) #1

declare dso_local i32 @ILVR_D2_SB(i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @XORI_B2_128_SB(i32, i32) #1

declare dso_local i32 @FILT_8TAP_DPADD_S_H(i32, i32, i32, i32, i32, i32, i32, i32) #1

declare dso_local i32 @SRARI_H2_SH(i32, i32, i32) #1

declare dso_local i32 @SAT_SH2_SH(i32, i32, i32) #1

declare dso_local i32 @PCKEV_XORI128_UB(i32, i32) #1

declare dso_local i32 @__msa_aver_u_b(i32, i32) #1

declare dso_local i32 @ST_W4(i32, i32, i32, i32, i32, i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
